[package]
name = "topological_batch"
version = "0.1.1"
edition = "2021"
description = "Parallel running of topologically dependent units in batches."
license = "MIT"
repository = "https://github.com/itarato/topological_batch_runner/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
